nambahin kamera validasi

--- a/src/index.css
+++ b/src/index.css
@@ -24,10 +24,12 @@
     margin: 0;
     min-width: 320px;
     min-height: 100vh;
+    overflow-x: hidden;
   }
 
   #root {
     width: 100%;
     min-height: 100vh;
+    overflow-x: hidden;
   }
 }
